@@ -2,48 +2,15 @@ ARG JAVA_MAJOR_VERSION=25
 
 FROM eclipse-temurin:${JAVA_MAJOR_VERSION}-alpine AS builder
 ARG MODULE
-ARG JAVA_MAJOR_VERSION
-
 WORKDIR /app
-
-# Build Scala backend module
-RUN apk add --no-cache curl jq
+RUN apk add --no-cache curl
 COPY . .
 RUN ./mill -i ${MODULE}.assembly
 
-# Create list of required Java modules
-RUN ./mill -i show ${MODULE}.runClasspath | jq -r 'join(":")' > classpath.info
-RUN $JAVA_HOME/bin/jdeps \
-    --ignore-missing-deps \
-    --print-module-deps \
-    --recursive \
-    --multi-release ${JAVA_MAJOR_VERSION} \
-    --class-path "$(cat classpath.info)" \
-    out/${MODULE}/compile.dest/classes > deps.info
-
-# Create custom JRE with the above modules
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules $(cat deps.info) \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=zip-6 \
-         --output /javaruntime
-
-
-FROM alpine:3.23
+FROM eclipse-temurin:${JAVA_MAJOR_VERSION}-jre-alpine
 ARG MODULE
-
 WORKDIR /app
-
 RUN apk add fontconfig && apk add ttf-dejavu
-
-# Set up custom JRE
-ENV JAVA_HOME=/opt/java/openjdk
-COPY --from=builder /javaruntime $JAVA_HOME
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-# Set up and run Scala app
 COPY --from=builder /app/out/${MODULE}/assembly.dest/out.jar /app/out.jar
 ENV LOG_APPENDER=Docker
 COPY jvm-runtime-options /app/jvm-runtime-options
